--- a/boards/arm/nucleo_f401re/nucleo_f401re_defconfig
+++ b/boards/arm/nucleo_f401re/nucleo_f401re_defconfig
@@ -6,6 +6,8 @@ CONFIG_SOC_STM32F401XE=y
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=84000000
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 
+
+
 # enable USART2 - passthrough to STLINK v2 connector
 CONFIG_UART_STM32_PORT_2=y
 # enable console on this port by default
@@ -33,6 +35,24 @@ CONFIG_CLOCK_STM32F4X_PLLQ_DIV_FACTOR=7
 CONFIG_CLOCK_STM32F4X_AHB_PRESCALER=0
 CONFIG_CLOCK_STM32F4X_APB1_PRESCALER=2
 CONFIG_CLOCK_STM32F4X_APB2_PRESCALER=0
+
+# Clock configuration for Cube Clock control driver
+CONFIG_CLOCK_STM32_HSE_CLOCK=8000000
+CONFIG_CLOCK_STM32_SYSCLK_SRC_PLL=y
+# use HSE as PLL input
+CONFIG_CLOCK_STM32_PLL_SRC_HSE=y
+# however, the board does not have an external oscillator, so just use
+# the 8MHz clock signal coming from integrated STLink
+CONFIG_CLOCK_STM32_HSE_BYPASS=y
+# produce 84MHz clock at PLL output
+CONFIG_CLOCK_STM32_PLLM_DIV_FACTOR=8
+CONFIG_CLOCK_STM32_PLLN_MULTIPLIER=336
+CONFIG_CLOCK_STM32_PLLP_DIV_FACTOR=4
+CONFIG_CLOCK_STM32_PLLQ_DIV_FACTOR=7
+CONFIG_CLOCK_STM32_AHB_PRESCALER=1
+CONFIG_CLOCK_STM32_APB1_PRESCALER=2
+CONFIG_CLOCK_STM32_APB2_PRESCALER=1
+
 
 #enable pwm
 CONFIG_PWM=y
