--- a/dts/arm/ti/cc32xx.dtsi
+++ b/dts/arm/ti/cc32xx.dtsi
@@ -1,7 +1,8 @@
 #include <arm/armv7-m.dtsi>
 #include <inc/hw_ints.h>
+#include <ti/mem.h>
 
-/* Note: Zephyr uses exception numbers, vs the IRQ #s used by the CC3200 SDK */
+/* Note: Zephyr uses exception numbers, vs the IRQ #s used by the CC32XX SDK */
 /* which are offset by 16: */
 #define EXP_UARTA0 (INT_UARTA0 - 16)
 #define EXP_UARTA1 (INT_UARTA1 - 16)
@@ -15,12 +16,12 @@
 
 	sram0: memory {
 		compatible = "sram";
-		reg = <0x20004000 0x3C000>;
+		reg = <DT_SRAM_START DT_SRAM_SIZE>;
 	};
 
 	flash0: serial-flash {
 		compatible = "serial-flash";
-		reg = <0x0 0x80000>;
+		reg = <0x0 DT_SFLASH_SIZE>;
 	};
 
 	soc {
@@ -28,7 +29,6 @@
 			compatible = "ti,cc32xx-uart";
 			reg = <0x4000C000 0x4c>;
 			interrupts = <EXP_UARTA0 3>;
-			baud-rate = <115200>;
 			status = "disabled";
 		};
 
@@ -36,7 +36,6 @@
 			compatible = "ti,cc32xx-uart";
 			reg = <0x4000D000 0x4c>;
 			interrupts = <EXP_UARTA1 3>;
-			baud-rate = <115200>;
 			status = "disabled";
 		};
 
